srkSetSubProject(${SRK_EXTENSION_PROJ_PREFIX})

set(OUTPUT_NAME ${SRK_EXTENSION_OUTPUT_NAME_PREFIX}hid)
set_property(GLOBAL PROPERTY SRKPROJ_EXTENSION_HID_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_EXTENSION_HID_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY SRKPROJ_EXTENSION_HID_DLL ${SRK_PROJECT_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_CORE_NAME GLOBAL PROPERTY "SRKPROJ_CORE_NAME")
get_property(SRKPROJ_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_CORE_INCLUDE")

set(NEED_LIBUDEV_ZERO OFF)
if (SRK_OS_LINUX)
    set(NEED_LIBUDEV_ZERO ON)
endif ()

if (NEED_LIBUDEV_ZERO)
    get_property(SRKPROJ_EXTERNAL_LIBUDEV_ZERO_NAME GLOBAL PROPERTY "SRKPROJ_EXTERNAL_LIBUDEV_ZERO_NAME")
    get_property(SRKPROJ_EXTERNAL_LIBUDEV_ZERO_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTERNAL_LIBUDEV_ZERO_INCLUDE")
    get_property(SRKPROJ_EXTERNAL_LIBUDEV_ZERO_SLIB GLOBAL PROPERTY "SRKPROJ_EXTERNAL_LIBUDEV_ZERO_SLIB")
endif ()

file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})

set(includeDir src/srk/ ${SRKPROJ_CORE_INCLUDE})
if (NEED_LIBUDEV_ZERO)
    list(APPEND includeDir ${SRKPROJ_EXTERNAL_LIBUDEV_ZERO_INCLUDE})
endif ()
target_include_directories(${PROJECT_NAME} PUBLIC ${includeDir})

target_compile_definitions(${PROJECT_NAME} PRIVATE SRK_EXT_HID_EXPORTS)

set(depends ${SRKPROJ_CORE_NAME})
if (NEED_LIBUDEV_ZERO)
    list(APPEND depends ${SRKPROJ_EXTERNAL_LIBUDEV_ZERO_NAME})
endif ()
add_dependencies(${PROJECT_NAME} ${depends})

set(linkLibs
    ${SRKPROJ_CORE_NAME}
)
if (SRK_OS_WINDOWS)
    list(APPEND linkLibs hid.lib SetupAPI.lib)
endif ()
if (NEED_LIBUDEV_ZERO)
    list(APPEND linkLibs ${SRKPROJ_EXTERNAL_LIBUDEV_ZERO_SLIB})
endif ()
target_link_libraries(${PROJECT_NAME} ${linkLibs})

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_EXTENSIONS_DIR_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_MODULES_INPUTS_DIR}/${PROJECT_NAME})