__set_project()
set(__OUTPUT_NAME ae-png-converter)
set_property(GLOBAL PROPERTY PROJECT_AE_PNG_CONVERTER_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_AE_PNG_CONVERTER_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY PROJECT_AE_PNG_CONVERTER_OUTPUT_NAME ${CMAKE_SHARED_LIBRARY_PREFIX}${__OUTPUT_NAME})
set_property(GLOBAL PROPERTY PROJECT_AE_PNG_CONVERTER_DLL ${AE_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${__OUTPUT_NAME}${AE_BUILD_TYPE_SUFFIX}${AE_DLL_SUFFIX})

get_property(PROJECT_AE_CORE_NAME GLOBAL PROPERTY "PROJECT_AE_CORE_NAME")
get_property(PROJECT_AE_CORE_INCLUDE GLOBAL PROPERTY "PROJECT_AE_CORE_INCLUDE")

get_property(PROJECT_AE_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_AE_FRAMEWORK_NAME")
get_property(PROJECT_AE_FRAMEWORK_INCLUDE GLOBAL PROPERTY "PROJECT_AE_FRAMEWORK_INCLUDE")

get_property(PROJECT_LIBPNG_NAME GLOBAL PROPERTY "PROJECT_LIBPNG_NAME")
get_property(PROJECT_LIBPNG_INCLUDE GLOBAL PROPERTY "PROJECT_LIBPNG_INCLUDE")

include_directories(
    ${PROJECT_AE_CORE_INCLUDE}
    ${PROJECT_AE_FRAMEWORK_INCLUDE}
    ${PROJECT_LIBPNG_INCLUDE}
)
add_definitions(${AE_EXTENSION_DEFINITIONS})
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME} 
    ${PROJECT_AE_FRAMEWORK_NAME}
    ${PROJECT_LIBPNG_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${PROJECT_AE_CORE_NAME}
    ${PROJECT_AE_FRAMEWORK_NAME}
)
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_LIBPNG_LIB")
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${AE_EXTENSIONS_DIR_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME})
__install(${AE_EXTENSIONS_DIR_NAME}/${PROJECT_NAME})