__set_project()
set(__OUTPUT_NAME ae-shader-script)
set_property(GLOBAL PROPERTY PROJECT_AE_SHADER_SCRIPT_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_AE_SHADER_SCRIPT_OUTPUT_NAME ${__OUTPUT_NAME})
set_property(GLOBAL PROPERTY PROJECT_AE_SHADER_SCRIPT_DLL ${AE_BUILD_DIR}/${__OUTPUT_NAME}${__BUILD_TYPE_POSTFIX}${CMAKE_SHARED_LIBRARY_SUFFIX})

get_property(PROJECT_AE_CORE_NAME GLOBAL PROPERTY "PROJECT_AE_CORE_NAME")
get_property(PROJECT_AE_CORE_SRC_DIR GLOBAL PROPERTY "PROJECT_AE_CORE_SRC_DIR")

include_directories(
    ${PROJECT_AE_CORE_SRC_DIR}/src/
)
add_definitions(-DAE_EXTENSION_EXPORTS)
file(GLOB SRC_FILES
    "src/*.h" "src/*.cpp"
    "src/*/*.h" "src/*/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME} 
    ${PROJECT_AE_CORE_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${PROJECT_AE_CORE_NAME}
)
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${AE_EXTENSIONS_FOLDER_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME}) 