__set_project()
set(__OUTPUT_NAME srk-graphics-gl)
set_property(GLOBAL PROPERTY PROJECT_SRK_GRAPHICS_GL_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_SRK_GRAPHICS_GL_DLL ${SRK_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${__OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(PROJECT_SRK_CORE_NAME GLOBAL PROPERTY "PROJECT_SRK_CORE_NAME")
get_property(PROJECT_SRK_CORE_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_CORE_INCLUDE")

get_property(PROJECT_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_NAME")
get_property(PROJECT_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_INCLUDE")

get_property(PROJECT_GLEW_NAME GLOBAL PROPERTY "PROJECT_GLEW_NAME")
get_property(PROJECT_GLEW_INCLUDE GLOBAL PROPERTY "PROJECT_GLEW_INCLUDE")
get_property(PROJECT_GLEW_LIB GLOBAL PROPERTY "PROJECT_GLEW_LIB")

include_directories(
    ${PROJECT_SRK_CORE_INCLUDE}
    ${PROJECT_SRK_FRAMEWORK_INCLUDE}
    ${PROJECT_GLEW_INCLUDE}
)
add_definitions(${SRK_MODULE_DEFINITIONS} -DGLEW_NO_GLU)
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
    ${PROJECT_GLEW_NAME}
)

target_link_libraries(${PROJECT_NAME}
    ${PROJECT_SRK_CORE_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
    ${PROJECT_GLEW_LIB}
)
if (WIN32)
    target_link_libraries(${PROJECT_NAME} opengl32.lib)
endif ()

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_GRAPHICS_MODULES_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME})
__install(${SRK_GRAPHICS_MODULES_DIR}/${PROJECT_NAME})