srkSetProject()
set(OUTPUT_NAME srk-graphics-gl)
set_property(GLOBAL PROPERTY SRKPROJ_SRK_GRAPHICS_GL_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_SRK_GRAPHICS_GL_DLL ${SRK_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_SRK_CORE_NAME GLOBAL PROPERTY "SRKPROJ_SRK_CORE_NAME")
get_property(SRKPROJ_SRK_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_CORE_INCLUDE")

get_property(SRKPROJ_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_NAME")
get_property(SRKPROJ_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_INCLUDE")

get_property(SRKPROJ_GLEW_NAME GLOBAL PROPERTY "SRKPROJ_GLEW_NAME")
get_property(SRKPROJ_GLEW_INCLUDE GLOBAL PROPERTY "SRKPROJ_GLEW_INCLUDE")
get_property(SRKPROJ_GLEW_LIB GLOBAL PROPERTY "SRKPROJ_GLEW_LIB")

include_directories(
    ${SRKPROJ_SRK_CORE_INCLUDE}
    ${SRKPROJ_SRK_FRAMEWORK_INCLUDE}
    ${SRKPROJ_GLEW_INCLUDE}
)
add_definitions(${SRK_MODULE_DEFINITIONS} -DGLEW_NO_GLU)
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
    ${SRKPROJ_GLEW_NAME}
)

target_link_libraries(${PROJECT_NAME}
    ${SRKPROJ_SRK_CORE_NAME}
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
    ${SRKPROJ_GLEW_LIB}
)
if (SRK_OS_WINDOWS)
    target_link_libraries(${PROJECT_NAME} opengl32.lib)
endif ()

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_GRAPHICS_MODULES_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_GRAPHICS_MODULES_DIR}/${PROJECT_NAME})