srkSetSubProject(${SRK_MODULE_GRAPHICS_PROJ_PREFIX})
set(OUTPUT_NAME ${SRK_MODULE_GRAPHICS_OUTPUT_NAME_PREFIX}gl)
set_property(GLOBAL PROPERTY SRKPROJ_MODULE_GRAPHICS_GL_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_MODULE_GRAPHICS_GL_DLL ${SRK_PROJECT_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_CORE_NAME GLOBAL PROPERTY "SRKPROJ_CORE_NAME")
get_property(SRKPROJ_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_CORE_INCLUDE")

get_property(SRKPROJ_FRAMEWORK_NAME GLOBAL PROPERTY "SRKPROJ_FRAMEWORK_NAME")
get_property(SRKPROJ_FRAMEWORK_INCLUDE GLOBAL PROPERTY "SRKPROJ_FRAMEWORK_INCLUDE")

get_property(SRKPROJ_EXTERNAL_GLEW_NAME GLOBAL PROPERTY "SRKPROJ_EXTERNAL_GLEW_NAME")
get_property(SRKPROJ_EXTERNAL_GLEW_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTERNAL_GLEW_INCLUDE")
get_property(SRKPROJ_EXTERNAL_GLEW_LIB GLOBAL PROPERTY "SRKPROJ_EXTERNAL_GLEW_LIB")

file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
target_include_directories(${PROJECT_NAME} PUBLIC
    ${SRKPROJ_CORE_INCLUDE}
    ${SRKPROJ_FRAMEWORK_INCLUDE}
    ${SRKPROJ_EXTERNAL_GLEW_INCLUDE}
)
target_compile_definitions(${PROJECT_NAME} PRIVATE ${SRK_MODULE_DEFINITIONS} -DGLEW_NO_GLU)
add_dependencies(${PROJECT_NAME}
    ${SRKPROJ_FRAMEWORK_NAME}
    ${SRKPROJ_EXTERNAL_GLEW_NAME}
)

target_link_libraries(${PROJECT_NAME}
    ${SRKPROJ_CORE_NAME}
    ${SRKPROJ_FRAMEWORK_NAME}
    ${SRKPROJ_EXTERNAL_GLEW_LIB}
)
if (SRK_OS_WINDOWS)
    target_link_libraries(${PROJECT_NAME} opengl32.lib)
elseif (SRK_OS_MACOS)
    target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES})
endif ()

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_MODULES_GRAPHICS_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_MODULES_GRAPHICS_DIR}/${PROJECT_NAME})