__set_project()
set(__OUTPUT_NAME ae-program-source-translator)
set_property(GLOBAL PROPERTY __PROJECT_AE_PST_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY __PROJECT_AE_PST_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set_property(GLOBAL PROPERTY __PROJECT_AE_PST_DLL ${__BUILD_DIR}/${__OUTPUT_NAME}${__BUILD_TYPE_POSTFIX}${CMAKE_SHARED_LIBRARY_SUFFIX})

get_property(__PROJECT_AE_CORE_NAME GLOBAL PROPERTY "__PROJECT_AE_CORE_NAME")
get_property(__PROJECT_AE_CORE_SRC_DIR GLOBAL PROPERTY "__PROJECT_AE_CORE_SRC_DIR")

get_property(__PROJECT_DX_SHADER_COMPILER_NAME GLOBAL PROPERTY "__PROJECT_DX_SHADER_COMPILER_NAME")
get_property(__PROJECT_DX_SHADER_COMPILER_INCLUDE GLOBAL PROPERTY "__PROJECT_DX_SHADER_COMPILER_INCLUDE")
get_property(__PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE GLOBAL PROPERTY "__PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE")

get_property(__PROJECT_SPIRV_CROSS_NAME GLOBAL PROPERTY "__PROJECT_SPIRV_CROSS_NAME")
get_property(__PROJECT_SPIRV_CROSS_INCLUDE GLOBAL PROPERTY "__PROJECT_SPIRV_CROSS_INCLUDE")

include_directories(
    ${__PROJECT_AE_CORE_SRC_DIR}/src/
    ${__PROJECT_DX_SHADER_COMPILER_INCLUDE}
    ${__PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE}
    ${__PROJECT_SPIRV_CROSS_INCLUDE}
)
add_definitions(-D AE_MODULE_EXPORTS)
file(GLOB SRC_FILES
    "src/*.h" "src/*.cpp"
    "src/*/*.h" "src/*/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${__PROJECT_AE_CORE_NAME}
    ${__PROJECT_DX_SHADER_COMPILER_NAME}
    ${__PROJECT_SPIRV_CROSS_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${__PROJECT_AE_CORE_NAME}
)
__target_link_library_external_project(${PROJECT_NAME} "__PROJECT_SPIRV_CROSS_CORE_SLIB")
__target_link_library_external_project(${PROJECT_NAME} "__PROJECT_SPIRV_CROSS_GLSL_SLIB")
__target_link_library_external_project(${PROJECT_NAME} "__PROJECT_SPIRV_CROSS_MSL_SLIB")
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${__AE_MODULES_FOLDER_NAME}/Graphics)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME}) 