__set_project()
set(__OUTPUT_NAME ae-program-source-translator)
set_property(GLOBAL PROPERTY PROJECT_AE_PST_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_AE_PST_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set_property(GLOBAL PROPERTY PROJECT_AE_PST_DLL ${AE_BUILD_DIR}/${__OUTPUT_NAME}${AE_BUILD_TYPE_SUFFIX}${AE_DLL_SUFFIX})

get_property(PROJECT_AE_CORE_NAME GLOBAL PROPERTY "PROJECT_AE_CORE_NAME")
get_property(PROJECT_AE_CORE_SRC_DIR GLOBAL PROPERTY "PROJECT_AE_CORE_SRC_DIR")

get_property(PROJECT_AE_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_AE_FRAMEWORK_NAME")
get_property(PROJECT_AE_FRAMEWORK_SRC_DIR GLOBAL PROPERTY "PROJECT_AE_FRAMEWORK_SRC_DIR")

get_property(PROJECT_DX_SHADER_COMPILER_NAME GLOBAL PROPERTY "PROJECT_DX_SHADER_COMPILER_NAME")
get_property(PROJECT_DX_SHADER_COMPILER_INCLUDE GLOBAL PROPERTY "PROJECT_DX_SHADER_COMPILER_INCLUDE")
get_property(PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE GLOBAL PROPERTY "PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE")

get_property(PROJECT_SPIRV_CROSS_NAME GLOBAL PROPERTY "PROJECT_SPIRV_CROSS_NAME")
get_property(PROJECT_SPIRV_CROSS_INCLUDE GLOBAL PROPERTY "PROJECT_SPIRV_CROSS_INCLUDE")

include_directories(
    ${PROJECT_AE_CORE_SRC_DIR}/src/
    ${PROJECT_AE_FRAMEWORK_SRC_DIR}/src/
    ${PROJECT_DX_SHADER_COMPILER_INCLUDE}
    ${PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE}
    ${PROJECT_SPIRV_CROSS_INCLUDE}
)
add_definitions(-DAE_MODULE_EXPORTS)
file(GLOB SRC_FILES
    "src/*.h" "src/*.cpp"
    "src/*/*.h" "src/*/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${PROJECT_AE_FRAMEWORK_NAME}
    ${PROJECT_DX_SHADER_COMPILER_NAME}
    ${PROJECT_SPIRV_CROSS_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${PROJECT_AE_CORE_NAME}
    ${PROJECT_AE_FRAMEWORK_NAME}
)
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_SPIRV_CROSS_CORE_SLIB")
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_SPIRV_CROSS_GLSL_SLIB")
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_SPIRV_CROSS_MSL_SLIB")
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_DX_SHADER_COMPILER_LLVMDxcSupport_SLIB")
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${AE_MODULES_FOLDER_NAME}/Graphics)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME})
__install(${PROJECT_NAME})