__set_project()
set(__OUTPUT_NAME srk-shader-transpiler)
set_property(GLOBAL PROPERTY PROJECT_SRK_SHADER_TRANSPILER_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_SRK_SHADER_TRANSPILER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set_property(GLOBAL PROPERTY PROJECT_SRK_SHADER_TRANSPILER_DLL ${SRK_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${__OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(PROJECT_SRK_CORE_NAME GLOBAL PROPERTY "PROJECT_SRK_CORE_NAME")
get_property(PROJECT_SRK_CORE_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_CORE_INCLUDE")

get_property(PROJECT_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_NAME")
get_property(PROJECT_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_INCLUDE")

get_property(PROJECT_DX_SHADER_COMPILER_NAME GLOBAL PROPERTY "PROJECT_DX_SHADER_COMPILER_NAME")
get_property(PROJECT_DX_SHADER_COMPILER_INCLUDE GLOBAL PROPERTY "PROJECT_DX_SHADER_COMPILER_INCLUDE")
get_property(PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE GLOBAL PROPERTY "PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE")

get_property(PROJECT_SPIRV_CROSS_NAME GLOBAL PROPERTY "PROJECT_SPIRV_CROSS_NAME")
get_property(PROJECT_SPIRV_CROSS_INCLUDE GLOBAL PROPERTY "PROJECT_SPIRV_CROSS_INCLUDE")

include_directories(
    ${PROJECT_SRK_CORE_INCLUDE}
    ${PROJECT_SRK_FRAMEWORK_INCLUDE}
    ${PROJECT_DX_SHADER_COMPILER_INCLUDE}
    ${PROJECT_DX_SHADER_COMPILER_PLATFORM_INCLUDE}
    ${PROJECT_SPIRV_CROSS_INCLUDE}
)
add_definitions(${SRK_MODULE_DEFINITIONS})
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
    ${PROJECT_DX_SHADER_COMPILER_NAME}
    ${PROJECT_SPIRV_CROSS_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${PROJECT_SRK_CORE_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
)
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_SPIRV_CROSS_CORE_SLIB")
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_SPIRV_CROSS_GLSL_SLIB")
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_SPIRV_CROSS_MSL_SLIB")
__target_link_library_external_project(${PROJECT_NAME} "PROJECT_DX_SHADER_COMPILER_LLVMDxcSupport_SLIB")
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_GRAPHICS_MODULES_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME})
__install(${SRK_GRAPHICS_MODULES_DIR}/${PROJECT_NAME})