srkSetProject()
set(OUTPUT_NAME srk-shader-transpiler)
set_property(GLOBAL PROPERTY SRKPROJ_SRK_SHADER_TRANSPILER_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_SRK_SHADER_TRANSPILER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set_property(GLOBAL PROPERTY SRKPROJ_SRK_SHADER_TRANSPILER_DLL ${SRK_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_SRK_CORE_NAME GLOBAL PROPERTY "SRKPROJ_SRK_CORE_NAME")
get_property(SRKPROJ_SRK_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_CORE_INCLUDE")

get_property(SRKPROJ_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_NAME")
get_property(SRKPROJ_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_INCLUDE")

get_property(SRKPROJ_DX_SHADER_COMPILER_NAME GLOBAL PROPERTY "SRKPROJ_DX_SHADER_COMPILER_NAME")
get_property(SRKPROJ_DX_SHADER_COMPILER_INCLUDE GLOBAL PROPERTY "SRKPROJ_DX_SHADER_COMPILER_INCLUDE")
get_property(SRKPROJ_DX_SHADER_COMPILER_PLATFORM_INCLUDE GLOBAL PROPERTY "SRKPROJ_DX_SHADER_COMPILER_PLATFORM_INCLUDE")

get_property(SRKPROJ_SPIRV_CROSS_NAME GLOBAL PROPERTY "SRKPROJ_SPIRV_CROSS_NAME")
get_property(SRKPROJ_SPIRV_CROSS_INCLUDE GLOBAL PROPERTY "SRKPROJ_SPIRV_CROSS_INCLUDE")

include_directories(
    ${SRKPROJ_SRK_CORE_INCLUDE}
    ${SRKPROJ_SRK_FRAMEWORK_INCLUDE}
    ${SRKPROJ_DX_SHADER_COMPILER_INCLUDE}
    ${SRKPROJ_DX_SHADER_COMPILER_PLATFORM_INCLUDE}
    ${SRKPROJ_SPIRV_CROSS_INCLUDE}
)
add_definitions(${SRK_MODULE_DEFINITIONS})
file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
add_dependencies(${PROJECT_NAME}
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
    ${SRKPROJ_DX_SHADER_COMPILER_NAME}
    ${SRKPROJ_SPIRV_CROSS_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${SRKPROJ_SRK_CORE_NAME}
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
)
#srkTargetLinkLibraryExternalProject(${PROJECT_NAME} "SRKPROJ_SPIRV_CROSS_LIB")
srkTargetLinkLibraryExternalProject(${PROJECT_NAME} "SRKPROJ_SPIRV_CROSS_CORE_SLIB")
srkTargetLinkLibraryExternalProject(${PROJECT_NAME} "SRKPROJ_SPIRV_CROSS_GLSL_SLIB")
srkTargetLinkLibraryExternalProject(${PROJECT_NAME} "SRKPROJ_SPIRV_CROSS_MSL_SLIB")
srkTargetLinkLibraryExternalProject(${PROJECT_NAME} "SRKPROJ_DX_SHADER_COMPILER_LLVMDxcSupport_SLIB")
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_GRAPHICS_MODULES_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_GRAPHICS_MODULES_DIR}/${PROJECT_NAME})