srkSetProject()
set(OUTPUT_NAME srk-graphics-vulkan)
set_property(GLOBAL PROPERTY SRKPROJ_SRK_GRAPHICS_VULKAN_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_SRK_GRAPHICS_VULKAN_DLL ${SRK_PROJECT_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_SRK_CORE_NAME GLOBAL PROPERTY "SRKPROJ_SRK_CORE_NAME")
get_property(SRKPROJ_SRK_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_CORE_INCLUDE")

get_property(SRKPROJ_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_NAME")
get_property(SRKPROJ_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_INCLUDE")

get_property(SRKPROJ_VULKAN_SDK_NAME GLOBAL PROPERTY "SRKPROJ_VULKAN_SDK_NAME")
get_property(SRKPROJ_VULKAN_SDK_INCLUDE GLOBAL PROPERTY "SRKPROJ_VULKAN_SDK_INCLUDE")
get_property(SRKPROJ_VULKAN_SDK_HAS_DLL GLOBAL PROPERTY "SRKPROJ_VULKAN_SDK_HAS_DLL")
get_property(SRKPROJ_VULKAN_SDK_LIB GLOBAL PROPERTY "SRKPROJ_VULKAN_SDK_LIB")
get_property(SRKPROJ_VULKAN_SDK_SLIB GLOBAL PROPERTY "SRKPROJ_VULKAN_SDK_SLIB")

include_directories(
    ${SRKPROJ_SRK_CORE_INCLUDE}
    ${SRKPROJ_SRK_FRAMEWORK_INCLUDE}
    ${SRKPROJ_VULKAN_SDK_INCLUDE}
)
add_definitions(${SRK_MODULE_DEFINITIONS})
file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
add_dependencies(${PROJECT_NAME} ${SRKPROJ_SRK_FRAMEWORK_NAME} ${SRKPROJ_VULKAN_SDK_NAME})

set(linkLibs
    ${SRKPROJ_SRK_CORE_NAME}
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
)
if (SRKPROJ_VULKAN_SDK_HAS_DLL)
    list(APPEND linkLibs ${SRKPROJ_VULKAN_SDK_LIB})
else ()
    list(APPEND linkLibs ${SRKPROJ_VULKAN_SDK_SLIB})
endif ()
target_link_libraries(${PROJECT_NAME} ${linkLibs})

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_GRAPHICS_MODULES_DIR})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_GRAPHICS_MODULES_DIR}/${PROJECT_NAME})