__set_project()
set(__OUTPUT_NAME ae-win-gl)
set_property(GLOBAL PROPERTY PROJECT_AE_WIN_GL_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_AE_WIN_GL_DLL ${AE_BUILD_DIR}/${__OUTPUT_NAME}${AE_BUILD_TYPE_SUFFIX}${AE_DLL_SUFFIX})

get_property(PROJECT_AE_CORE_NAME GLOBAL PROPERTY "PROJECT_AE_CORE_NAME")
get_property(PROJECT_AE_CORE_SRC_DIR GLOBAL PROPERTY "PROJECT_AE_CORE_SRC_DIR")

get_property(PROJECT_AE_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_AE_FRAMEWORK_NAME")
get_property(PROJECT_AE_FRAMEWORK_SRC_DIR GLOBAL PROPERTY "PROJECT_AE_FRAMEWORK_SRC_DIR")

get_property(PROJECT_GLEW_NAME GLOBAL PROPERTY "PROJECT_GLEW_NAME")
get_property(PROJECT_GLEW_INCLUDE GLOBAL PROPERTY "PROJECT_GLEW_INCLUDE")
get_property(PROJECT_GLEW_LIB GLOBAL PROPERTY "PROJECT_GLEW_LIB")

include_directories(
    ${PROJECT_AE_CORE_SRC_DIR}/src/
    ${PROJECT_AE_FRAMEWORK_SRC_DIR}/src/
    ${PROJECT_GLEW_INCLUDE}
)
add_definitions(-DAE_MODULE_EXPORTS)
file(GLOB SRC_FILES
    "src/*.h" "src/*.cpp"
    "src/*/*.h" "src/*/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${PROJECT_AE_FRAMEWORK_NAME}
    ${PROJECT_GLEW_NAME}
)

target_link_libraries(${PROJECT_NAME}
    ${PROJECT_AE_CORE_NAME}
    ${PROJECT_AE_FRAMEWORK_NAME}
    ${PROJECT_GLEW_LIB}
)
if (WIN32)
    target_link_libraries(${PROJECT_NAME} opengl32.lib)
endif ()

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${AE_MODULES_FOLDER_NAME}/Graphics)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME})
__install(${PROJECT_NAME})